<resources>
    <string name="app_name">HiddenGems</string>
    <string name="home_btn">Home</string>
    <string name="search_btn">Search</string>
    <string name="add_gem_btn">Add Gem</string>
    <string name="faves_btn">Favorites</string>
    <string name="profile_btn">Profile</string>
    <string name="hello_msg_1">Hey User,  </string>
    <string name="hello_msg_2"> \u0020 Good Afternoon!</string>
    <string name="categories_title">All Categories</string>
    <string name="latest_title">Latest Gems</string>
    <string name="gem_view_title">Gem View</string>
    <string name="my_rating_title">MY RATING</string>
    <string name="comments_title">Comments</string>
    <string name="comments_hint">Comment...</string>
    <string name="comments_post">Post</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Gem name...</string>
    <string name="refine_search_title">Refine Search</string>
    <string name="suggested_gems_title">Suggested Gems</string>
    <string name="create_gem_title">Create Gem</string>
    <string name="name_label">NAME</string>
    <string name="name_placeholder">Name</string>
    <string name="desc_label">DESCRIPTION</string>
    <string name="desc_placeholder">Description</string>
    <string name="address_label">ADDRESS</string>
    <string name="address_placeholder">Address</string>
    <string name="city_placeholder">City</string>
    <string name="type_placeholder">Type</string>
    <string name="rating_placeholder">Rating</string>
    <string name="save_btn">Save</string>
    <string name="edit_gem_btn">Edit Gem</string>
    <string name="delete_gem_btn">Delete Gem</string>
    <string name="favorites_title">Favorites</string>
    <string name="profile_title">My Profile</string>
    <string name="visited_gems_title">Visited Gems</string>
    <string name="my_gems_title">My Gems</string>
    <string name="not_visited">Not visited</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="username_label">USERNAME</string>
    <string name="bio_label">BIO</string>
    <string name="bio_placeholder">Bio</string>
    <string name="log_in_btn">Log In</string>
    <string name="log_out_btn">Log Out</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="log_in_subtitle">Please log in to your existing account</string>
    <string name="sign_up_subtitle">Please sign up to get started</string>
    <string name="email_label">EMAIL</string>
    <string name="email_placeholder">Email</string>
    <string name="password_label">PASSWORD</string>
    <string name="conf_password_placeholder">Confirm Password</string>
    <string name="conf_password_label">CONFIRM PASSWORD</string>
    <string name="password_placeholder">Password</string>
    <string name="no_acc_txt">Don`t have an account?</string>
    <string name="acc_txt">Have an account?</string>
    <string name="success_msg">Sign up successful. Please log in.</string>
    <string name="error_msg">User and/or password are incorrect.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>