<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.EditProfile.EditProfileFragment">

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:icon="@drawable/back_svgrepo_com"
        app:iconGravity="textStart"
        app:iconPadding="-9dp"
        app:iconSize="20dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/darkgray" />

    <TextView
        android:id="@+id/tvGemViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:text="@string/edit_profile_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivUserImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sky2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGemViewTitle"
        app:shapeAppearanceOverlay="@style/circular" />

    <Button
        android:id="@+id/btnEditImg"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="@color/main"
        android:textSize="14sp"
        app:icon="@drawable/edit_svgrepo_com"
        app:iconGravity="textStart"
        app:iconPadding="-9dp"
        app:iconSize="20dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ivUserImg"
        app:layout_constraintTop_toBottomOf="@+id/ivUserImg"
        app:strokeColor="@color/darkgray" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/username_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivUserImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:boxBackgroundColor="@color/gray"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
        app:placeholderText="@string/name_placeholder"
        app:shapeAppearanceOverlay="@style/cornerRadius">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="25"
            android:maxLines="1"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="578dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvBioLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/bio_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBioLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:boxBackgroundColor="@color/gray"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBioLabel"
        app:placeholderText="@string/bio_placeholder"
        app:shapeAppearanceOverlay="@style/cornerRadius">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="250"
            android:maxLines="3"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="578dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/save_btn"
        app:backgroundTint="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilBioLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>